tests/code/pages/errors/adjacent-tokens.tht


foo bar

if $a 123 {
    // ...
}

// Invalid standalone expression.
// $a['oo'] 123

